Added install link to template

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,6 +31,8 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+        <h3><a href="http://gsuite.google.com/marketplace/app/appname/567341081140" target="_blank">Install</a></h3>
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
